[package]
name = "bevy-settings"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "Use a simple struct as persistent settings between game launches. Usefull for e.g. storing the audio settings"
repository = "https://github.com/tecbeast42/bevy-settings"
readme = "README.md"
keywords = ["gamedev", "settings", "persistent"]
categories = ["game-development"]
exclude = [
    ".github/*",
]

[dependencies]
bevy_app = "=0.16.0-rc.5"
bevy_ecs = "=0.16.0-rc.5"
bevy_log = "=0.16.0-rc.5"
directories = "6"
serde = "1"
toml = "0.8"

[dev-dependencies]
bevy = "=0.16.0-rc.5"
pretty_assertions = "1.4"
rand = "0.9"
serial_test = "3.1.1"